--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Natalia2022r.github.io/redux",
+  "homepage": "http://Natalia2022r.github.io/REDUX",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
